# cascadia-ai

./: .gitignore  README.md  demo.tape  pyproject.toml
cascadia_ai/: areas.py  enums.py  environment.py  environments.py  game_state.py  groups.py  habitat_layer.py  helpers.py  hex_grid.py  positions.py  score.py  tiles.py  tui.py  wildlife_layer.py
cascadia_ai/ai/: actions.py  features.py  features2.py  features3.py  gnn.py  greedy.py  greedy2.py  migrate.py  model.py  qnetwork.py  random.py  reinforcement.py  reinforcement3.py  runner.py  setnn.py  simple_reinforcement.py  training_data.py  transitions.py
cascadia_ai/demo/: game.pkl  generate.py  playback.py
results/: greedy.tsv
tests/: score.py  test_actions.py  test_areas.py  test_features.py  test_features_equality.py  test_habitat_layer.py  test_score.py  test_transitions.py
