[tool.poetry]
name = "cascadia-ai"
version = "0.1.0"
description = ""
authors = ["David Moody <david@davidxmoody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
