[tool.poetry]
name = "cascadia-ai"
version = "0.1.0"
description = ""
authors = ["David Moody <david@davidxmoody.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.8.0"
ipython = "^8.27.0"
lightning = "^2.4.0"
torch-geometric = "^2.5.3"
pandas = "^2.2.2"
plotly = "^5.24.1"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
